# agent-service-toolkit

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  Taskfile.yml  azure-pipelines.yml  codecov.yaml  codecov.yml  compose.vertex.yaml  compose.yaml  debug.txt  dump.rdb  langgraph.json  pyproject.toml  railway.toml  requirements.txt  run_client.py  run_service.py  streamlit_app.py  test-requirements.txt  test.py  todo.md  ttest.py  目录.txt
.claude/: settings.json
.claude/hooks/: ensure-pinned-uv.sh
.claude/skills/dependency-refresh/: SKILL.md
.claude/skills/maintainer-response/: SKILL.md
.claude/skills/model-refresh/: SKILL.md
.claude/skills/smoke-test/: SKILL.md
.github/workflows/: build-pipeline.yml  deploy.yml  live-smoke-test.yml  pr-labeler.yaml  pre-commit.yaml  release.yaml  template-cleanup.yml  test-docker.yml  test.yml  unit-test.yaml
agent/: __init__.py  langgraph.json  llama_guard.py  requirements.txt  research_assistant.py  tools.py
agent/consultant_agent/: fetch_information.py  utils.py
agent/consultant_agent/customer/: customer_agent.py
agent/consultant_agent/template/: constant.py
api/: wechat_data_api.py  wechat_rpa_api.py
apiservice/: __init__.py
client/: client.py
client/consultant/: consultantAgentclient.py
docker/: Dockerfile.app  Dockerfile.backend  Dockerfile.service  compose.mongo.yaml  compose.optional.yaml
docs/: AGUI.md  Dependency_Upgrades.md  Dynamische_Linkgenerierung.md  File_Based_Credentials.md  GitHub_MCP_Agent.md  Model_Refresh.md  Neuen_Agent_im_ASTK_anlegen.md  Ollama.md  Queue_Task_Spec.md  RAG_Assistant.md  README_COMPLEX_MULTITOOL.MD  Skill_System.md  VertexAI.md  dual_track_agent_platform_plan.md
docs/maintenance/: CI_Follow_Through_Run.md  Daily_Sentinel.md  README.md  Weekly_Maintenance_Run.md
documents/diagrams/: earlyModel-edit.txt  earlyModel-edit.txt:Zone.Identifier  earlyModel-edit.txtZone.Identifier
helpers/: create_chroma_db.py
media/: agent_architecture.excalidraw  meeting-mind.md
privatecredentials/: .gitkeep
schema/: __init__.py  schema.py  test_schema.py
scripts/: check_live_models.py  create_chroma_db.py  e2e_ui_tests.py  smoke_live_app.py  smoke_test.sh  smoke_test_optional.sh
scripts/agui-client/: client.mjs  package.json
service/: __init__.py  service.py  test_service.py
src/: Agent_Service_Toolkit.py  DWH_Readiness.py  Skill_Companion.py  database_handler.py  run_agent.py  run_client.py  run_service.py  streamlit_app.py  task_data_status.py  theme_selector.py
src/agent/: __init__.py  llama_guard.py  research_assistant.py  research_assistant_bg_tasks.py  tools.py
src/agents/: Meeting Mind.json  __init__.py  agents.py  chatbot.py  chatbot_antigo.py  command_agent.py  complex_multitool.py  dwh_readiness_summary.py  external_agent.py  helpers.py  hitl_agent.py  internal_agent.py  interrupt_agent.py  interrupted_assistant.py  knowledge_base_agent.py  langgraph_supervisor_agent.py  langgraph_supervisor_hierarchy_agent.py  lazy_agent.py  llama_guard.py  meeting_mind.py  models.py  rag_assistant.py  research_assistant.py  safeguard.py  similarity_agent.py  skillcompanion.py  skillcompanion_interrupted.py  tools.py  utils.py
src/agents/agents_questions/: dwh_readiness_challenge_questions.json  dwh_readiness_satisfaction_questions.json  skill_questions.json
src/agents/bg_task_agent/: bg_task_agent.py  task.py
src/agents/github_mcp_agent/: github_mcp_agent.py
src/agents/packs/: __init__.py  core.py  dwh.py  loader.py  skill.py  types.py
src/agents/prompts/: ask_question_prompt.txt  categorize_user_prompt.txt  skill_companion_ask_question_prompt.txt  skill_companion_strict_ask_question_prompt.txt
src/agents/react_agent/: __init__.py  agent.py  configuration.py  tools.py
src/agents/tools/: __init__.py
src/apps/: __init__.py
src/apps/dwh_readiness/: __init__.py  app.py
src/apps/skill_companion/: __init__.py  app.py
src/archive/: Agent_Service_Toolkit.py  Chat_Agent_Playground.py  Meeting_Mind.py  Roosi_And_Friends.py  Skill_Check.py
src/client/: __init__.py  auth.py  client.py
src/core/: __init__.py  config.py  llm.py  logging.py  settings.py
src/langfuse_evaluation/: __init__.py  skillcompanion_evaluation.py
src/memory/: __init__.py  mongodb.py  postgres.py  sqlite.py  thread_store.py
src/pages/: Skill_Companion.py
src/schema/: __init__.py  models.py  schema.py  task_data.py  test_schema.py
src/service/: __init__.py  agui.py  service.py  test_service.py  test_utils.py  utils.py
src/skills/: __init__.py  loader.py  matcher.py  registry.py  resources.py  toolkit.py  types.py
src/streamlit_utils/: dwh_helpers.py  evaluation_ui.py
src/variants/: __init__.py  variant_config.py
src/variants/dwh_readiness/: default.yml
src/variants/skill_companion/: default.yml  (+1 more)
src/voice/: __init__.py  manager.py  stt.py  tts.py
tests/: conftest.py  test_complex_multitool.py
tests/agents/: test_agent_loading.py  test_database_search_tool.py  test_dwh_readiness_summary.py  test_github_mcp_agent.py  test_json_cleaner.py  test_langgraph_supervisor_agent.py  test_lazy_agent.py  test_llamaguard_parsing.py  test_registry.py  test_skillcompanion_ask_question.py  test_skillcompanion_flow.py  test_skillcompanion_interrupted.py
tests/app/: conftest.py  test_streamlit_app.py
tests/client/: conftest.py  test_client.py
tests/core/: test_llm.py  test_settings.py
tests/integration/: test_agent_e2e.py  test_docker.py  test_docker_e2e.py  test_optional_deps.py
tests/optional/: test_optional_deps.py
tests/service/: conftest.py  test_agui.py  test_auth.py  test_service.py  test_service_agui.py  test_service_e2e.py  test_service_lifespan.py  test_service_message_generator.py  test_service_streaming.py  test_utils.py
tests/skills/: test_skill_system.py
tests/smoke/: test_persistence.py
tests/streamlit_utils/: test_evaluation_ui.py
tests/voice/: conftest.py  test_manager.py  test_stt.py  test_tts.py
themes/: default.toml  sdx.toml
web-agui/: index.html
(+16 files in other folders)
