[project]
name = "agent-service-toolkit"
version = "0.1.0"
description = "Full toolkit for running an AI agent service built with LangGraph, FastAPI and Streamlit"
readme = "README.md"
authors = [{ name = "Joshua Carroll", email = "carroll.joshk@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.11,<3.14"

dependencies = [
    # Constrained <0.22: langgraph-checkpoint-sqlite 2.x calls Connection.is_alive(),
    # which aiosqlite removed in 0.22. Revisit when upgrading the sqlite checkpointer to 3.x.
    "aiosqlite >=0.20,<0.22",
    "docx2txt ~=0.8",
    "duckduckgo-search>=8.1.1",
    "fastapi ~=0.138.2",
    "grpcio >=1.81.1",
    "httpx ~=0.28.1",
    "jiter ~=0.16.0",
    "langchain ~=1.2.18",
    "langchain-core ~=1.4.8",
    "langchain-community ~=0.4.2",
    "langchain-anthropic ~=1.4.8",
    "langchain-aws ~=1.6.1",
    "langchain-chroma ~=1.1.0",
    "langchain-google-genai ~=3.0.3",
    "langchain-google-vertexai>=3.2.4",
    "langchain-groq ~=1.1.3",
    "langchain-ollama ~=1.1.0",
    "langchain-openai ~=1.3.3",
    "langfuse ~=3.10",
    "langgraph ~=1.1.10",
    "langgraph-checkpoint-mongodb ~=0.1.4",
    "langgraph-checkpoint-postgres ~=2.0.25",
    "langgraph-checkpoint-sqlite ~=2.0.11",
    "langgraph-supervisor ~=0.0.31",
    "langsmith ~=0.9.4",
    "numexpr ~=2.14.1",
    "numpy ~=2.4.6",
    "onnxruntime ~= 1.27.0",
    "pandas ~=2.2.3",
    "psycopg[binary,pool] ~=3.3.4",
    "pyarrow >=23.0.1",
    "pydantic ~=2.13.4",
    "pydantic-settings ~=2.14.2",
    "pypdf ~=6.14.2",
    "pyowm ~=3.3.0",
    "python-dotenv ~=1.0.1",
    "setuptools ~=82.0.1",
    "streamlit ~=1.58.0",
    "tiktoken >=0.13.0",
    "uvicorn ~=0.49.0",
    "langchain-mcp-adapters>=0.3.0",
    "ddgs>=9.14.4",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-asyncio",
    "ruff",
    "mypy <2.0",
]

# Group for the minimal dependencies to run just the client and Streamlit app.
# These are also installed in the default dependencies.
# To install run: `uv sync --frozen --only-group client`
client = [
    "httpx~=0.28.1",
    "pydantic ~=2.13.4",
    "python-dotenv ~=1.0.1",
    "streamlit~=1.58.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "U"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"

[tool.pytest_env]
OPENAI_API_KEY = "sk-fake-openai-key"

[tool.mypy]
plugins = "pydantic.mypy"
exclude = "src/streamlit_app.py"

[[tool.mypy.overrides]]
module = ["numexpr.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["langchain_mcp_adapters.*"]
ignore_missing_imports = true
